--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "tailwind-merge": "^3.4.0"
+    "react-dropzone": "^14.3.8",
+    "tailwind-merge": "^3.4.0",
+    "tesseract.js": "^7.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
